# monsgeek-linux-firmware-driver

./: .gitignore
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.claude/commands/gsd/: add-phase.md  add-tests.md  add-todo.md  audit-milestone.md  autonomous.md  check-todos.md  cleanup.md  complete-milestone.md  debug.md  discuss-phase.md  do.md  execute-phase.md  health.md  help.md  insert-phase.md  list-phase-assumptions.md  map-codebase.md  new-milestone.md  new-project.md  next.md  note.md  pause-work.md  plan-milestone-gaps.md  plan-phase.md  profile-user.md  progress.md  quick.md  reapply-patches.md  remove-phase.md  research-phase.md  resume-work.md  session-report.md  set-profile.md  settings.md  ship.md  stats.md  ui-phase.md  ui-review.md  update.md  validate-phase.md  (+1 more)
.claude/get-shit-done/references/: decimal-phase-calculation.md  git-integration.md  (+5 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  WAITING.json
.planning/debug/: investigate-bug-1-magnetic-gating.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/monsgeek-cli/: Cargo.toml
crates/monsgeek-cli/src/: client.rs  commands.rs  device_select.rs  format.rs  lib.rs  main.rs
crates/monsgeek-cli/tests/: cli_smoke.rs  firmware_cli.rs
crates/monsgeek-driver/: Cargo.toml  build.rs
crates/monsgeek-driver/proto/: driver.proto
crates/monsgeek-driver/src/: bridge_transport.rs  lib.rs  main.rs  pb.rs
crates/monsgeek-driver/src/service/: db_store.rs  device_registry.rs  firmware_update.rs  mod.rs
crates/monsgeek-driver/tests/: bounds_validation.rs  grpc_contract_tests.rs  grpc_db_tests.rs  grpc_watch_stream_tests.rs  mock_transport.rs  ota_stream.rs
crates/monsgeek-firmware/: Cargo.toml
crates/monsgeek-firmware/src/: engine.rs  lib.rs  manifest.rs  preflight.rs  progress.rs  vendor_api.rs
crates/monsgeek-inputd/: Cargo.toml
crates/monsgeek-inputd/src/: config.rs  daemon.rs  lib.rs  main.rs  uinput_device.rs
crates/monsgeek-inputd/tests/: hardware.rs
crates/monsgeek-protocol/: Cargo.toml
crates/monsgeek-transport/: Cargo.toml
crates/monsgeek-transport/deploy/: 99-monsgeek.rules  monsgeek-hid-usbhid.conf
crates/monsgeek-transport/examples/: recover.rs  test_debounce.rs
crates/monsgeek-transport/src/: active_path.rs  bounds.rs  controller.rs  discovery.rs  error.rs  flow_control.rs  input.rs  keycodes.rs  keymap.rs  lib.rs  runtime_config.rs  thread.rs  usb.rs
crates/monsgeek-transport/tests/: hardware.rs  hotplug_debug.rs  magnetism.rs  stall_recovery.rs  udev_debug.rs
deploy/config/: transport-config.json
deploy/systemd/: monsgeek-driver.service  monsgeek-inputd.service
docs/: firmware-update.md  systemd.md
scripts/: benchmark-input-latency.sh  firmware-flash-checkpoint.sh  install-systemd-services.sh  uninstall-systemd-services.sh  verify-discovery-paths.sh  verify-stall-recovery.sh  verify-systemd-services.sh
tools/: README.md  compositor_tracer.py  generate_linux_device_artifacts.py  input_monitor.py  latency_tracer.py  test.sh  usb_input_tracer.py
(+181 files in other folders)
