[package]
name = "monsgeek-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
monsgeek-driver = { path = "../monsgeek-driver" }
monsgeek-protocol = { path = "../monsgeek-protocol" }
monsgeek-firmware = { path = "../monsgeek-firmware" }
monsgeek-transport = { path = "../monsgeek-transport" }
