[package]
name = "monsgeek-transport"
version = "0.1.0"
edition = "2024"

[dependencies]
monsgeek-protocol = { path = "../monsgeek-protocol" }
rusb = "0.9"
thiserror = "2.0"
log = "0.4"
crossbeam-channel = "0.5"
udev = "0.9.3"
libc = "0.2.183"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
simple_logger = "5"

[features]
hardware = []
dangerous-hardware-writes = []
